--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch --maxWorkers=1",
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
+    "typeorm": "cross-env NODE_ENV=development typeorm-ts-node-esm",
+    "migration:generate": "cross-env NODE_ENV=development npm run typeorm -- -d ./typeorm.config.ts migration:generate ./migrations/$npm_config_name"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
@@ -31,10 +33,11 @@
     "class-validator": "^0.13.2",
     "cookie-session": "^2.0.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.0.9",
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
@@ -56,7 +59,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
