--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
     "typeorm": "cross-env NODE_ENV=development typeorm-ts-node-esm",
-    "migration:generate": "cross-env NODE_ENV=development npm run typeorm -- -d ./typeorm.config.ts migration:generate ./migrations/$npm_config_name"
+    "migration:generate": "npm run typeorm -- -d ./typeorm.config.ts migration:generate ./migrations/$npm_config_name",
+    "migration:run": "npm run typeorm -- -d ./typeorm.config.ts migration:run",
+    "migration:create": "npm run typeorm -- -d ./typeorm.config.ts migration:create ./migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- -d ./typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
